--- a/config.toml
+++ b/config.toml
@@ -6,4 +6,4 @@ title = "NATS by Apcera"
   leftNav = false
   description = "NATS - NATS was created as a central nervous system for cloud native and distributed systems, and provides the foundation for modern, reliable, and scalable cloud and distributed systems."
   author = "The NATS team"
-  mainMenu=[ "home", "download", "clients", "documentation", "support", "community" ]
+  mainMenu=[ "home", "download", "clients", "documentation", "support", "community", "blog" ]
