--- a/data/clients/releases.yaml
+++ b/data/clients/releases.yaml
@@ -64,13 +64,13 @@ Releases:
 
 - name: C
   type: supported client
-  version_num: 0.0.0
+  version_num: 1.0.1
   repo_url: https://github.com/nats-io/cnats
   release_notes: |
-    Release 0.1.5-alpha on October 9, 2015.
+    Release 1.0.1 on November 12, 2015.
   downloads:
     - name: Source
-      url: https://github.com/nats-io/cnats/archive/v0.1.5-alpha.zip
+      url: https://github.com/nats-io/cnats/archive/v1.0.1.tar.gz
     - name: View on GitHub
       url: https://github.com/nats-io/cnats
   has_docs: false
