--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ SectionPagesMenu = "main"
   leftNav = true
   description = "NATS documentation"
   author = "The NATS team"
-  mainMenu=[ "home", "download", "clients", "documentation", "support", "community" ]
+  mainMenu=[ "home", "download", "documentation", "support", "community" ]
   noCategoryLink = true
 
 [[menu.main]]
