--- a/data/clients/releases.yaml
+++ b/data/clients/releases.yaml
@@ -195,7 +195,7 @@ Releases:
     - name: View on GitHub
       url: https://github.com/nats-io/gnatsd
     - name: Linux Binary
-      url: https://github.com/nats-io/gnatsd/releases/download/v0.7.2/gnatsd-v0.7.2-darwin-amd64.tar.gz
+      url: https://github.com/nats-io/gnatsd/releases/download/v0.7.2/gnatsd-v0.7.2-linux-amd64.tar.gz
     - name: Mac OS X Binary
       url: https://github.com/nats-io/gnatsd/releases/download/v0.7.2/gnatsd-v0.7.2-darwin-amd64.tar.gz
     - name: Docker Image
