--- a/data/clients/releases.yaml
+++ b/data/clients/releases.yaml
@@ -179,11 +179,7 @@ Releases:
     - name: View on GitHub
       url: https://github.com/cloudfoundry-community/java-nats/tree/master/client-spring
 
-- name: nats-server
-  type: external server
-  repo_url: https://github.com/apcera/gnatsd/
-
-- name: gnatsd
+- name: NATS Server
   type: supported server
   version_num: 0.7.2
   repo_url: https://github.com/nats-io/gnatsd
