Working on new header and updating content pages

--- a/config.toml
+++ b/config.toml
@@ -6,4 +6,4 @@ title = "NATS - Cloud Native, Open Source, High Performance Messaging"
   leftNav = false
   description = "NATS is a high performance messaging system that acts as a distributed messaging queue for cloud native applications, IoT device messaging, and microservices architecture."
   author = "The NATS team"
-  mainMenu=[ "home", "about", "download", "documentation", "support", "community", "blog" ]
+  mainMenu=[ "about", "download", "documentation", "support", "community", "blog" ]
