--- a/data/clients/releases.yaml
+++ b/data/clients/releases.yaml
@@ -29,10 +29,10 @@ Releases:
 
 - name: C#
   type: supported client
-  version_num: 0.3.0
+  version_num: 0.4.0
   repo_url: https://github.com/nats-io/csnats
   release_notes: |
-    Release 0.3.0-beta on December 11th, 2015.
+    Release 0.4.0 on February 11th, 2015.
   downloads:
     - name: View on GitHub
       url: https://github.com/nats-io/csnats
