--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -63,9 +63,9 @@ Releases:
 - name: Java
   type: client
   supported: true
-  version_num: 0.3.1
+  version_num: 0.4.1
   release_notes: |
-    Release 0.3.1 on January 18th, 2016
+    Release 0.4.1 on April 3rd, 2016
   github:
     - user: nats-io
       repo: jnats
