--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -19,6 +19,7 @@ Releases:
 - name: C
   type: client
   supported: true
+  language: C
   version_num: 1.2.10
   release_notes: |
     Release 1.2.10 on February 26th, 2016.
@@ -30,6 +31,7 @@ Releases:
 - name: C#
   type: client
   supported: true
+  language: C#
   version_num: 0.4.0
   release_notes: |
     Release 0.4.0 on February 11th, 2016.
@@ -41,6 +43,7 @@ Releases:
 - name: Elixir
   type: client
   supported: true
+  language: Elixer
   version_num: 0.1.4-alpha
   release_notes: |
     Release v0.1.4-alpha on January 27th, 2016.
@@ -52,6 +55,7 @@ Releases:
 - name: Go
   type: client
   supported: true
+  language: Golang
   version_num: 1.1.6
   release_notes: |
     Release v1.1.6 on December 9th, 2015.
@@ -63,6 +67,7 @@ Releases:
 - name: Java
   type: client
   supported: true
+  language: Java
   version_num: 0.4.1
   release_notes: |
     Release 0.4.1 on April 3rd, 2016
@@ -74,6 +79,7 @@ Releases:
 - name: NGINX
   type: client
   supported: true
+  language: C
   version_num: 0.0.0
   release_notes: |
     Last updated August 18th, 2015.
@@ -85,6 +91,7 @@ Releases:
 - name: Node.js
   type: client
   supported: true
+  language: Javascript
   version_num: 0.5.4
   release_notes: |
     Release v.0.5.4, January 8th, 2016
@@ -96,6 +103,7 @@ Releases:
 - name: Python Asyncio
   type: client
   supported: true
+  language: Python
   version_num: 0.1.0
   release_notes: |
     Release v.0.1.0, February 2nd, 2016
@@ -107,6 +115,7 @@ Releases:
 - name: Python Tornado
   type: client
   supported: true
+  language: Python
   version_num: 0.2.2
   release_notes: |
     Release v.0.2.2, December 22nd, 2015
@@ -118,6 +127,7 @@ Releases:
 - name: Ruby
   type: client
   supported: true
+  language: Ruby
   version_num: 0.5.1
   release_notes: |
     Release 0.5.1 on August 6th, 2015.
@@ -129,6 +139,7 @@ Releases:
 - name: Arduino
   type: client
   supported: false
+  language: C++
   version_num: 0.0.0
   release_notes: |
     Last udpated on March 15th, 2015.
@@ -140,6 +151,7 @@ Releases:
 - name: Erlang
   type: client
   supported: false
+  language: Erlang
   version_num: 0.4.0
   release_notes: |
     Release 0.4.0 on April 17th, 2016.
@@ -151,6 +163,7 @@ Releases:
 - name: Haskell
   type: client
   supported: false
+  language: Haskell
   version_num: 0.0.0
   release_notes: |
     Last updated to 1.2.0 on November 25th, 2014
@@ -162,6 +175,7 @@ Releases:
 - name: Lua
   type: client
   supported: false
+  language: Lua
   version_num: 0.0.4
   release_notes: |
     Last updated to v 0.0.2 on July 16th, 2015
@@ -173,6 +187,7 @@ Releases:
 - name: PHP
   type: client
   supported: false
+  language: PHP
   version_num: 0.4.0
   release_notes: |
     Last updated to v0.4.0 on October 11th, 2015.
@@ -184,6 +199,7 @@ Releases:
 - name: Python
   type: client
   supported: false
+  language: Python
   version_num: 0.0.0
   release_notes: |
     Last updated September 19th, 2014.
@@ -195,6 +211,7 @@ Releases:
 - name: Python Twisted
   type: client
   supported: false
+  language: Python
   version_num: 0.0.0
   release_notes: |
     Last updated January 14th, 2016.
@@ -206,6 +223,7 @@ Releases:
 - name: Rust
   type: client
   supported: false
+  language: Rust
   version_num: 0.1.1
   release_notes: |
     Last updated September 8th, 2015
@@ -217,6 +235,7 @@ Releases:
 - name: Scala
   type: client
   supported: false
+  language: Scala
   version_num: 0.0.0
   release_notes: |
     No Release Notes
@@ -228,6 +247,7 @@ Releases:
 - name: Spring API
   type: client
   supported: false
+  language: Java
   version_num: 0.0.0
   release_notes: |
     No release notes.
@@ -239,6 +259,7 @@ Releases:
 - name: NATS Server
   type: server
   supported: true
+  language: Golang
   version_num: 0.7.2
   release_notes: |
     Release v0.7.2 on December 9th, 2015.<br> Docker Image last updated December 9th, 2015.
