Updated downloads to include author for comminity clients

--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -20,6 +20,9 @@ Releases:
   type: client
   supported: true
   language: C
+  author:
+    - name:
+      link:
   version_num: 1.2.10
   release_notes: |
     Release 1.2.10 on February 26th, 2016.
@@ -32,6 +35,9 @@ Releases:
   type: client
   supported: true
   language: C#
+  author:
+    - name:
+      link:
   version_num: 0.4.0
   release_notes: |
     Release 0.4.0 on February 11th, 2016.
@@ -43,7 +49,10 @@ Releases:
 - name: Elixir
   type: client
   supported: true
-  language: Elixer
+  language: Elixir
+  author:
+    - name:
+      link:
   version_num: 0.1.4-alpha
   release_notes: |
     Release v0.1.4-alpha on January 27th, 2016.
@@ -56,6 +65,9 @@ Releases:
   type: client
   supported: true
   language: Golang
+  author:
+    - name:
+      link:
   version_num: 1.1.6
   release_notes: |
     Release v1.1.6 on December 9th, 2015.
@@ -68,6 +80,9 @@ Releases:
   type: client
   supported: true
   language: Java
+  author:
+    - name:
+      link:
   version_num: 0.4.1
   release_notes: |
     Release 0.4.1 on April 3rd, 2016
@@ -80,6 +95,9 @@ Releases:
   type: client
   supported: true
   language: C
+  author:
+    - name:
+      link:
   version_num: 0.0.0
   release_notes: |
     Last updated August 18th, 2015.
@@ -92,6 +110,9 @@ Releases:
   type: client
   supported: true
   language: Javascript
+  author:
+    - name:
+      link:
   version_num: 0.5.4
   release_notes: |
     Release v.0.5.4, January 8th, 2016
@@ -104,6 +125,9 @@ Releases:
   type: client
   supported: true
   language: Python
+  author:
+    - name:
+      link:
   version_num: 0.1.0
   release_notes: |
     Release v.0.1.0, February 2nd, 2016
@@ -116,6 +140,9 @@ Releases:
   type: client
   supported: true
   language: Python
+  author:
+    - name:
+      link:
   version_num: 0.2.2
   release_notes: |
     Release v.0.2.2, December 22nd, 2015
@@ -128,6 +155,9 @@ Releases:
   type: client
   supported: true
   language: Ruby
+  author:
+    - name:
+      link:
   version_num: 0.5.1
   release_notes: |
     Release 0.5.1 on August 6th, 2015.
@@ -140,6 +170,9 @@ Releases:
   type: client
   supported: false
   language: C++
+  author:
+    - name: Josh Glendenning
+      link: https://github.com/joshglendenning
   version_num: 0.0.0
   release_notes: |
     Last udpated on March 15th, 2015.
@@ -152,6 +185,9 @@ Releases:
   type: client
   supported: false
   language: Erlang
+  author:
+    - name: Yuce Tekol
+      link: https://github.com/yuce
   version_num: 0.4.0
   release_notes: |
     Release 0.4.0 on April 17th, 2016.
@@ -164,6 +200,9 @@ Releases:
   type: client
   supported: false
   language: Haskell
+  author:
+    - name: Ondrej Palkovsky
+      link: https://github.com/ondrap
   version_num: 0.0.0
   release_notes: |
     Last updated to 1.2.0 on November 25th, 2014
@@ -176,6 +215,9 @@ Releases:
   type: client
   supported: false
   language: Lua
+  author:
+    - name: Eric Pinto
+      link: https://github.com/DawnAngel
   version_num: 0.0.4
   release_notes: |
     Last updated to v 0.0.2 on July 16th, 2015
@@ -188,6 +230,9 @@ Releases:
   type: client
   supported: false
   language: PHP
+  author:
+    - name: Raül Pérez
+      link: https://github.com/repejota
   version_num: 0.4.0
   release_notes: |
     Last updated to v0.4.0 on October 11th, 2015.
@@ -200,6 +245,9 @@ Releases:
   type: client
   supported: false
   language: Python
+  author:
+    - name: Máximo Cuadros
+      link: https://github.com/mcuadros
   version_num: 0.0.0
   release_notes: |
     Last updated September 19th, 2014.
@@ -212,6 +260,9 @@ Releases:
   type: client
   supported: false
   language: Python
+  author:
+    - name: John Lockwood
+      link: https://github.com/johnwlockwood
   version_num: 0.0.0
   release_notes: |
     Last updated January 14th, 2016.
@@ -224,6 +275,9 @@ Releases:
   type: client
   supported: false
   language: Rust
+  author:
+    - name: Frank Denis
+      link: https://github.com/jedisct1
   version_num: 0.1.1
   release_notes: |
     Last updated September 8th, 2015
@@ -236,6 +290,9 @@ Releases:
   type: client
   supported: false
   language: Scala
+  author:
+    - name: Teppei Yagihashi
+      link: https://github.com/tyagihas
   version_num: 0.0.0
   release_notes: |
     No Release Notes
@@ -248,6 +305,9 @@ Releases:
   type: client
   supported: false
   language: Java
+  author:
+    - name: Mike Heath
+      link: https://github.com/mheath
   version_num: 0.0.0
   release_notes: |
     No release notes.
@@ -260,6 +320,9 @@ Releases:
   type: server
   supported: true
   language: Golang
+  author:
+    - name:
+      link:
   version_num: 0.7.2
   release_notes: |
     Release v0.7.2 on December 9th, 2015.<br> Docker Image last updated December 9th, 2015.
