--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -113,9 +113,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.6.2
+  version_num: 0.6.4
   release_notes: |
-    Release v.0.6.2, April 9th, 2016
+    Release v.0.6.4, June 10th, 2016
   github:
     - user: nats-io
       repo: node-nats
@@ -338,17 +338,25 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.8.0
+  version_num: 0.8.1
   release_notes: |
-    Release v0.8.0 on May 9th, 2016.<br> Docker Image last updated May 9th, 2016.
+    Release v0.8.1 on June 10th, 2016.<br> Docker Image last updated June 10th, 2016.
   github:
     - user: nats-io
       repo: gnatsd
       link: https://github.com/nats-io/gnatsd
   links:
-  - name: Linux Binary
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.0/gnatsd-v0.8.0-linux-amd64.zip
-  - name: Mac OS X Binary
-    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.0/gnatsd-v0.8.0-darwin-amd64.zip
+  - name: gnatsd-v0.8.1-darwin-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-darwin-amd64.zip
+  - name: gnatsd-v0.8.1-linux-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-linux-amd64.zip
+  - name: gnatsd-v0.8.1-linux-386.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-linux-386.zip
+  - name: gnatsd-v0.8.1-linux-arm.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-linux-arm.zip
+  - name: gnatsd-v0.8.1-windows-386.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-windows-386.zip
+  - name: gnatsd-v0.8.1-windows-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
