--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -360,3 +360,33 @@ Releases:
     url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
+
+- name: NATS Streaming
+  type: streaming
+  supported: true
+  language: Golang
+  author:
+    - name:
+      link:
+  version_num: 0.8.1
+  release_notes: |
+    Release v0.8.1 on June 10th, 2016.<br> Docker Image last updated June 10th, 2016.
+  github:
+    - user: nats-io
+      repo: streaming
+      link: https://github.com/nats-io/streaming
+  links:
+  - name: gnatsd-v0.8.1-darwin-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-darwin-amd64.zip
+  - name: gnatsd-v0.8.1-linux-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-linux-amd64.zip
+  - name: gnatsd-v0.8.1-linux-386.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-linux-386.zip
+  - name: gnatsd-v0.8.1-linux-arm.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-linux-arm.zip
+  - name: gnatsd-v0.8.1-windows-386.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-windows-386.zip
+  - name: gnatsd-v0.8.1-windows-amd64.zip
+    url: https://github.com/nats-io/gnatsd/releases/download/v0.8.1/gnatsd-v0.8.1-windows-amd64.zip
+  - name: Official Docker Image
+    url: https://hub.docker.com/_/nats/
