--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,6 @@ pygmentsstyle = "native"
   leftNav = false
   description = "NATS is a high performance messaging system that acts as a distributed messaging queue for cloud native applications, IoT device messaging, and microservices architecture."
   author = "The NATS team"
-  mainMenu=[ "about", "download", "documentation", "support", "community", "blog" ]
-
   baseurl = "http://nats.io/"
   languageCode = "en-us"
   title = "NATS by Apcera - Documentation"
@@ -19,60 +17,106 @@ pygmentsstyle = "native"
   noCategoryLink = true
   githubBaseUrl = "https://github.com/nats-io/nats-site/edit/master/content"
 
-[[menu.documentation]]
-  name = "getting started"
+[[menu.main]]
+  name = "About"
   weight = 0
-[[menu.documentation]]
-  name = "clients"
-  weight = 1
-[[menu.documentation]]
-  name = "concepts"
-  weight = 2
-[[menu.documentation]]
-  name = "internals"
-  weight = 3
-[[menu.documentation]]
-  name = "server"
-  weight = 4
-[[menu.documentation]]
-  name = "tutorials"
-  weight = 5
+  identifier = "about"
+  url = "/about"
 
-[[menu.downloads]]
-  name = "NATS"
+[[menu.main]]
+  name = "Download"
   weight = 1
-  identifier = "nats"
-  [[menu.downloads]]
-    name = "Server"
-    weight = 0
-    identifier = "nats-server"
-    parent = "nats"
-  [[menu.downloads]]
-    name = "Apcera Supported Clients"
+  identifier = "download"
+  url = "/download"
+  [[menu.main]]
+    name = "NATS"
     weight = 1
-    identifier = "nats-clients"
-    parent = "nats"
-  [[menu.downloads]]
-    name = "Community Clients"
-    weight = 2
-    identifier = "nats-comunity"
-    parent = "nats"
-[[menu.downloads]]
-  name = "NATS Streaming"
-  weight = 0
-  identifier = "nats-streaming"
-  [[menu.downloads]]
-    name = "Server"
+    identifier = "nats"
+    parent = "download"
+    [[menu.main]]
+      name = "Server"
+      weight = 0
+      identifier = "nats-server"
+      parent = "nats"
+    [[menu.main]]
+      name = "Apcera Supported Clients"
+      weight = 1
+      identifier = "nats-clients"
+      parent = "nats"
+    [[menu.main]]
+      name = "Community Clients"
+      weight = 2
+      identifier = "nats-comunity"
+      parent = "nats"
+  [[menu.main]]
+    name = "NATS Streaming"
     weight = 0
-    identifier = "streaming-server"
-    parent = "nats-streaming"
-  [[menu.downloads]]
-    name = "Apcera Supported Clients"
+    identifier = "nats-streaming"
+    parent = "download"
+    [[menu.main]]
+      name = "Server"
+      weight = 0
+      identifier = "streaming-server"
+      parent = "nats-streaming"
+    [[menu.main]]
+      name = "Apcera Supported Clients"
+      weight = 1
+      identifier = "streaming-clients"
+      parent = "nats-streaming"
+    [[menu.main]]
+      name = "Community Clients"
+      weight = 2
+      identifier = "streaming-comunity"
+      parent = "nats-streaming"
+
+[[menu.main]]
+  name = "Documentation"
+  weight = 2
+  identifier = "documentation"
+  url = "/documentation"
+  [[menu.main]]
+    name = "Getting Started"
+    weight = 0
+    parent = "documentation"
+  [[menu.main]]
+    name = "Clients"
     weight = 1
-    identifier = "streaming-clients"
-    parent = "nats-streaming"
-  [[menu.downloads]]
-    name = "Community Clients"
+    parent = "documentation"
+  [[menu.main]]
+    name = "Concepts"
     weight = 2
-    identifier = "streaming-comunity"
-    parent = "nats-streaming"
+    parent = "documentation"
+  [[menu.main]]
+    name = "Internals"
+    weight = 3
+    parent = "documentation"
+  [[menu.main]]
+    name = "Server"
+    weight = 4
+    parent = "documentation"
+  [[menu.main]]
+    name = "Streaming"
+    weight = 5
+    parent = "documentation"
+  [[menu.main]]
+    name = "Tutorials"
+    weight = 6
+    parent = "documentation"
+
+[[menu.main]]
+  name = "Support"
+  weight = 3
+  identifier = "support"
+  url = "/support"
+
+[[menu.main]]
+  name = "Community"
+  weight = 4
+  identifier = "community"
+  url = "/community"
+
+[[menu.main]]
+  name = "Blog"
+  weight = 5
+  identifier = "blog"
+  url = "/blog"
