--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -390,3 +390,16 @@ Releases:
     - user: nats-io
       repo: nats-streaming-server
       link: https://github.com/nats-io/nats-streaming-server
+  links:
+  - name: nats-streaming-server-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.1.0/nats-streaming-server-darwin-amd64.zip
+  - name: nats-streaming-server-linux-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.1.0/nats-streaming-server-linux-386.zip
+  - name: nats-streaming-server-linux-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.1.0/nats-streaming-server-linux-amd64.zip
+  - name: nats-streaming-server-linux-arm.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.1.0/nats-streaming-server-linux-arm.zip
+  - name: nats-streaming-server-windows-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.1.0/nats-streaming-server-windows-386.zip
+  - name: nats-streaming-server-windows-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.1.0/nats-streaming-server-windows-amd64.zip
