--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -353,9 +353,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.1.0
+  version_num: 0.2.0
   release_notes: |
-    Release v0.1.0 on June 23rd, 2016.
+    Release v0.2.0 on July 19th, 2016.
   github:
     - user: nats-io
       repo: go-nats-streaming
