--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.0",
     "gulp-gm": "0.0.8",
     "gulp-if": "^2.0.0",
     "gulp-image-resize": "^0.7.1",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-minify-css": "^1.2.1",
     "gulp-uglify": "^1.4.1",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
